Added quick start guide for running Wordcount on UVROCKS cluster